--- a/imgui.ini
+++ b/imgui.ini
@@ -3,8 +3,8 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Dear ImGui Demo]
-Pos=4,5
-Size=550,680
+[Window][Cityscape]
+Pos=4,4
+Size=256,512
 Collapsed=0
 
