update mesh header to compile, dotnet settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,5 +74,6 @@
         "span": "cpp",
         "variant": "cpp",
         "format": "cpp"
-    }
+    },
+    "dotnet.defaultSolution": "disable"
 }
