remake gui, fine-tune snow :)

--- a/imgui.ini
+++ b/imgui.ini
@@ -5,6 +5,11 @@ Collapsed=0
 
 [Window][Cityscape]
 Pos=4,4
-Size=270,520
+Size=249,286
+Collapsed=0
+
+[Window][Controls]
+Pos=4,294
+Size=291,300
 Collapsed=0
 
